--- a/LATEX/Chapter1.tex
+++ b/LATEX/Chapter1.tex
@@ -12,6 +12,7 @@
 \chapter{Introduction}
 
 	\minitoc 
+	%\addtocontents{toc}{\protect\contentsline{chapter}{\protect\numberline{}Introduction}{}{}}
 	\vspace{5mm}
 	RISC-V is an open-source hardware instruction set architecture (ISA) based on established reduced instruction set computer (RISC) principles. The project began in 2010 at the University of California, Berkeley. Nowadays, well known enterprises in the hardware sector like NVIDIA and Western Digital have announced a plan to start using RISC-V processors in their future products.
 	\section{Motivation}
