--- a/LATEX/FrontPages.tex
+++ b/LATEX/FrontPages.tex
@@ -12,7 +12,7 @@
 \noindent\rule{10cm}{0.4pt}
 \end{flushleft}
 To my family and in the loving memory of my dear grandfather, \\
-Nikos Deligiannis...
+\textbf{Nikos Deligiannis...}
 \label{Acknowledgements}
 \newpage
 \begin{flushleft}
