--- a/LATEX/FirstPage.tex
+++ b/LATEX/FirstPage.tex
@@ -11,7 +11,7 @@
 		\begin{center}
 			%\vspace*{1cm}
 			\huge
-			\textbf{Design and Implementation of a RISC-V Central Processing Unit}
+			\textbf{Design and Implementation of a single core RISC-V Central Processing Unit}
 			
 			\vspace{0.5cm}
 			\textit{$ISA : RV32I$}
@@ -32,6 +32,6 @@
 			
 		\end{center}
 		
-	\end{titlepage}\
+	\end{titlepage}
 
 %\end{document}
